# Nema-Q

./: .gitignore  NEMA_Q_colab.ipynb  README.md  RESEARCH_PIPELINE.md  SESSION_CONTEXT.md  pyproject.toml
configs/: base.yaml  citeseer_gat.yaml  citeseer_gcn.yaml  citeseer_hgcn.yaml  citeseer_nemaq.yaml  cora_gat.yaml  cora_gcn.yaml  cora_hgcn.yaml  cora_nemaq.yaml  disease_gat.yaml  disease_gcn.yaml  disease_hgcn.yaml  disease_nemaq.yaml  pubmed_gat.yaml  pubmed_gcn.yaml  pubmed_hgcn.yaml  pubmed_nemaq.yaml
configs/ablations/: citeseer_nemaq_euclidean.yaml  citeseer_nemaq_frozen_random.yaml  citeseer_nemaq_trunk_only.yaml  cora_nemaq_anglenorm.yaml  cora_nemaq_anglenorm_frozen.yaml  disease_nemaq_euclidean.yaml  disease_nemaq_frozen_random.yaml  disease_nemaq_trunk_only.yaml  nemaq_euclidean.yaml  nemaq_frozen_random.yaml  nemaq_softmax_fusion.yaml  nemaq_surrogate.yaml  nemaq_trunk_only.yaml  pubmed_nemaq_euclidean.yaml  pubmed_nemaq_frozen_random.yaml  pubmed_nemaq_trunk_only.yaml
experiments/: PREREGISTRATION.md
paper/: NEMAQ_QMI_draft.md  references.md
paper/figures/: fig1_architecture.tex
paper/latex/: .gitignore  main.tex  main_build.bbl  main_build.blg  sn-bibliography.bib
scripts/: compute_hyperbolicity.py  draw_circuit.py  make_figures.py  run_eda.py  run_matrix.py  run_xai.py  train.py
src/nemaq/analysis/: eda.py  figures.py  plotstyle.py  stats.py  xai.py
src/nemaq/data/: loader.py  (+1 more)
tests/: test_analysis_figures.py  test_config.py  test_fusion.py  test_geometry_interaction.py  test_models.py  test_param_match.py  test_qoa.py  test_stats.py
(+448 files in other folders)
